[package]
name = "storage-bench"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <you@example.com>"]
description = "High-performance storage benchmarking tool with built-in bottleneck detection"
license = "MIT OR Apache-2.0"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
libc = "0.2"
procfs = "0.16"
sysinfo = "0.30"
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.8"
anyhow = "1.0"
thiserror = "1.0"
crossbeam = "0.8"
# numa support will be added via system calls or libnuma bindings
# liburing = "0.0.2"  # Commented out - will add io_uring support later
rand = "0.8"
num_cpus = "1.16"
io-uring = "0.6"

[dev-dependencies]
criterion = "0.5"

[[bin]]
name = "storage-bench"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

